# Audio-Transkript

./: .gitignore  CLAUDE.md  MEMORY.md  PLAN.md  README.md  build_app.sh  install.sh  launch_app.py  pyproject.toml  setup.py  shell-aliases.md
.claude/commands/: prime.md
assets/: AppIcon.icns
context/: business-info.md  current-data.md  personal-info.md  strategy.md
docs/superpowers/plans/: 2026-04-04-panel-textanzeige.md
src/: __main__.py  app.py  claude_usage.py  config.py  f19_tap.py  hotkeys.py  launcher.py  ocr.py  recorder.py  text_input.py  transcriber.py  vocabulary.py
